@@ -1,0 +1,4 @@
+= Post With Date
+:revdate: 2016-06-15 10:30:00
+
+Lorem ipsum.
